# legal-agent

./: .env.example  .gitattributes  .gitignore  README.md  langgraph.json  load_relational.py  load_vectors.py  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
datasets/: legal-dataset.jsonl
